fix opacity issue on Firefox

--- a/src/static/css/_select2-dsfr.scss
+++ b/src/static/css/_select2-dsfr.scss
@@ -35,12 +35,7 @@
   overflow-y: auto;
 }
 
-.select2-container--select2-dsfr .select2-search__field::placeholder {
-  font-style: italic;
-  color: var(--text-default-grey);
-  background-color: var(--background-contrast-grey);
-}
-
+.select2-container--select2-dsfr .select2-search__field::placeholder,
 .select2-container--select2-dsfr .select2-selection__placeholder {
   font-style: italic;
   color: var(--text-default-grey);
